course_files/manifests/ingress/nginx-ingress/nginx-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: smt.example.com:5000/sles12sp3_nginx
        ports:
        - containerPort: 80
