course_files/manifests/ingress/nginx-ingress/nginx-service copy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  ports: 
    - port: 80
      nodePort: 30000
  selector:
      app: nginx
